# red-blue-stack

./: Test.lhs  red-blue-stack.cabal
Data/: RedBlueStack.hs
Test/: RedBlueStack.hs
